--- a/respiratory_diagnosis_assistant/search/templates/search/search.html
+++ b/respiratory_diagnosis_assistant/search/templates/search/search.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+{% comment %} <!DOCTYPE html>
 <html>
 <head>
     <title>Search Page</title>
@@ -10,5 +10,57 @@
         {{ form.as_p }}
         <button type="submit">Search</button>
     </form>
+</body>
+</html> {% endcomment %}
+
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Search Page</title>
+</head>
+<body>
+    <h1>Respiratory Search</h1>
+    <form id="searchForm" method="post" enctype="multipart/form-data">
+        {% csrf_token %}
+        <input type="text" id="textInput" name="query" placeholder="Enter text">
+
+        <br><br>
+
+        <input type="file" id="audioInput" name="audioFile">
+        
+        <br><br>
+        
+        <input type="radio" id="textOption" name="inputType" value="text" checked>
+        <label for="textOption">Text</label>
+        
+        <br>
+        
+        <input type="radio" id="audioOption" name="inputType" value="audio">
+        <label for="audioOption">Audio</label>
+
+        <br><br>
+        
+        <input type="submit" value="Search">
+    </form>
+
+    <script>
+        // Get form and input elements
+        const form = document.getElementById('searchForm');
+        const textInput = document.getElementById('textInput');
+        const audioInput = document.getElementById('audioInput');
+
+        // Add event listener for form submission
+        form.addEventListener('submit', function(event) {
+            // Check if text input is selected
+            if (document.getElementById('textOption').checked) {
+                // Update form action for text search
+                form.action = "{% url 'text_results' %}";
+            } else if (document.getElementById('audioOption').checked) {
+                // Update form action for audio search
+                form.action = "{% url 'audio_results' %}";
+            }
+            // Form submission continues with the updated action
+        });
+    </script>
 </body>
 </html>
