Add additional information

--- a/respiratory_diagnosis_assistant/search/templates/search/about.html
+++ b/respiratory_diagnosis_assistant/search/templates/search/about.html
@@ -26,13 +26,17 @@
         </nav>
     </header>
 
-    <h2>Development Team</h2>
-    <ul>
-        <li>Minjun Kim</li>
-        <li>Nabin Kim</li>
-        <li>Sandra Kurian</li>
-        <li>Seohee Yoon</li>
-    </ul>
+    <h2>User/Use Case</h2>
+    <p>The potential users of the application are medical professionals, including doctors, nurses, physicians, and specialists. These professionals will utilize the application to streamline their workflow, access patient information efficiently, and interpret diagnostic results. The system should cater to their specific needs with user-friendly interfaces designed for easy navigation and interpretation of medical data.</p>
+    
+    <h2>Problem Definition</h2>
+    <p>There are several components of this project:</p>
+    <ol>
+        <li>Establish a database system for adult patients, child patients, audio files, and diagnoses.</li>
+        <li>Develop a machine learning model for the classification of respiratory conditions based on lung sounds.</li>
+        <li>Convert user input (If it is audio files) to features and use it for classification with metadata(optional).</li>
+        <li>Return audio features (and original audio if possible) files related to user input if user input is text (disease name).</li>
+    </ol>
     
 </body>
 </html>
