--- a/respiratory_diagnosis_assistant/search/templates/search/contact.html
+++ b/respiratory_diagnosis_assistant/search/templates/search/contact.html
@@ -38,8 +38,11 @@
         {% comment %} <h2>Contact Information</h2> {% endcomment %}
         <p>If you have any questions, feedback, or inquiries, feel free to reach out to us:</p>
         <ul>
-            <li>Email: info@respiratorysearch.com</li>
-            <li>Phone: 123-456-7890</li>
+            <li>Minjun Kim (mkim925@gatech.edu) </li>
+            <li>Nabin Kim (nabin@gatech.edu) </li>
+            <li>Sandra Kurian (skurian32@gatech.edu) </li>
+            <li>Seohee Yoon (syoon333@gatech.edu) </li>
+            
         </ul>
     </section>
 
