--- a/respiratory_diagnosis_assistant/search/templates/search/search.html
+++ b/respiratory_diagnosis_assistant/search/templates/search/search.html
@@ -6,14 +6,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Search Page</title>
+    <title>Home</title>
 </head>
 <body>
-
     <!-- Top Banner -->
     <header>
         <!-- Page name on the left -->
-        <h1>Search Page</h1>
+        <h1>Respiratory Search App</h1>
         <!-- Links to other pages on the right -->
         <nav>
             <ul>
@@ -25,28 +24,19 @@
             </ul>
         </nav>
     </header>
-
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Search Page</title>
-</head>
-    <br>
-
-    <!-- Search Form -->
-    
+<!-- Search Form -->
 <form action="/submit" method="post" enctype="multipart/form-data">
   
   <h2>Search Type:</h2>
   <input type="radio" id="condition" name="searchType" value="condition" checked>
-  <label for="condition">Search by Condition</label><br>
+  <label for="condition">Search by Condition: output the top 5 audio files which best match the condition and additional demographic information</label><br>
   <input type="radio" id="audio" name="searchType" value="audio">
-  <label for="audio">Search by Audio File</label><br><br>
+  <label for="audio">Search by Audio File: output the condition and confidence score based on the audio file and additional demographic information</label><br><br>
   
   <div id="conditionDiv">
     <label for="conditionSelect">Condition:</label>
     <select id="conditionSelect" name="condition">
-      <option value=null>--pick condition--</option>
+      <option value=null></option>
       <option value="URTI">URTI</option>
       <option value="Asthma">Asthma</option>
       <option value="COPD">COPD</option>
@@ -56,8 +46,7 @@
     </select>
   </div>
 
-  
-  <div id="audioDiv">
+  <div id="audioDiv" style="display:none;">
     <label for="audioFile">Audio File:</label>
     <input type="file" id="audioFile" name="audioFile" accept="audio/*" required>
     <br> <small>(Accepted formats: .wav, .mp3; Duration: 10-90 seconds)</small>
@@ -66,18 +55,19 @@
   <br>
 
   <h2>Optional Demographic Information:</h2>
+  <p>While this information is optional, providing this will give a more accrate output.</p>
   
   <label for="age">Age:</label>
   <input type="number" id="age" name="age"><br>
   
   <label for="sex">Sex:</label>
   <select id="sex" name="sex">
-    <option value=null>--pick sex--</option>
+    <option value=null></option>
     <option value="male">Male</option>
     <option value="female">Female</option>
   </select><br>
   
-  <label for="bmi">BMI:</label>
+  <label for="bmi">Adult BMI:</label>
   <input type="number" id="bmi" name="bmi" step="0.01"><br>
   
   <label for="childWeight">Child Weight (kg):</label>
@@ -92,14 +82,16 @@
 </form>
 
 <script>
-document.querySelector('input[name="searchType"]').addEventListener('change', function() {
-  if (this.value === 'condition') {
-    document.getElementById('conditionDiv').style.display = 'block';
-    document.getElementById('audioDiv').style.display = 'none';
-  } else {
-    document.getElementById('conditionDiv').style.display = 'none';
-    document.getElementById('audioDiv').style.display = 'block';
-  }
+document.querySelectorAll('input[name="searchType"]').forEach(function(input) {
+  input.addEventListener('change', function() {
+    if (this.value === 'condition') {
+      document.getElementById('conditionDiv').style.display = 'block';
+      document.getElementById('audioDiv').style.display = 'none';
+    } else {
+      document.getElementById('conditionDiv').style.display = 'none';
+      document.getElementById('audioDiv').style.display = 'block';
+    }
+  });
 });
 </script>
 
