update page name

--- a/respiratory_diagnosis_assistant/search/templates/search/search.html
+++ b/respiratory_diagnosis_assistant/search/templates/search/search.html
@@ -12,7 +12,7 @@
     <!-- Top Banner -->
     <header>
         <!-- Page name on the left -->
-        <h1>Respiratory Search App</h1>
+        <h1>Search</h1>
         <!-- Links to other pages on the right -->
         <nav>
             <ul>
