--- a/respiratory_diagnosis_assistant/search/templates/search/search.html
+++ b/respiratory_diagnosis_assistant/search/templates/search/search.html
@@ -29,7 +29,7 @@
   
   <h2>Search Type:</h2>
   <input type="radio" id="condition" name="searchType" value="condition" checked>
-  <label for="condition">Search by Condition: output the top 5 audio files which best match the condition and additional demographic information</label><br>
+  <label for="condition">Search by Condition: outputs the audio files which best matches the condition and additional demographic information</label><br>
   <input type="radio" id="audio" name="searchType" value="audio">
   <label for="audio">Search by Audio File: output the condition and confidence score based on the audio file and additional demographic information</label><br><br>
   
@@ -55,7 +55,7 @@
   <br>
 
   <h2>Optional Demographic Information:</h2>
-  <p>While this information is optional, providing this will give a more accrate output.</p>
+  <p>While this information is optional, providing this will give a more accurate output.</p>
   
   <label for="age">Age:</label>
   <input type="number" id="age" name="age"><br>
