--- a/respiratory_diagnosis_assistant/search/templates/search/search.html
+++ b/respiratory_diagnosis_assistant/search/templates/search/search.html
@@ -25,7 +25,7 @@
         </nav>
     </header>
 <!-- Search Form -->
-<form action="/search" method="post" enctype="multipart/form-data">
+<form action="/search" method="POST" enctype="multipart/form-data">
   
   <h2>Search Type:</h2>
   <input type="radio" id="condition" name="searchType" value="condition" checked>
