--- a/respiratory_diagnosis_assistant/search/templates/search/search.html
+++ b/respiratory_diagnosis_assistant/search/templates/search/search.html
@@ -25,8 +25,8 @@
         </nav>
     </header>
 <!-- Search Form -->
-<form action="/search" method="POST" enctype="multipart/form-data">
-  
+<form action="{% url 'search' %}" method="post" enctype="multipart/form-data">
+  {% csrf_token %}
   <h2>Search Type:</h2>
   <input type="radio" id="condition" name="searchType" value="condition" checked>
   <label for="condition">Search by Condition: outputs the audio files which best matches the condition and additional demographic information</label><br>
