--- a/respiratory_diagnosis_assistant/search/templates/search/search.html
+++ b/respiratory_diagnosis_assistant/search/templates/search/search.html
@@ -48,7 +48,7 @@
 
   <div id="audioDiv" style="display:none;">
     <label for="audioFile">Audio File:</label>
-    <input type="file" id="audioFile" name="audioFile" accept="audio/*" required>
+    <input type="file" id="audioFile" name="audioFile" accept="audio/*">
     <br> <small>(Accepted formats: .wav, .mp3; Duration: 10-90 seconds)</small>
   </div>
   
